--- a/style.css
+++ b/style.css
@@ -82,6 +82,12 @@ main strong{
 main #creditos{
     font-size: 20px;
 }
+main a{
+    margin: 0px;
+    padding: 0px;
+    text-align: right;
+    font-size: 16px;
+}
 footer{
     background-color: var(--cor5);
     color: white;
